--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 </head>
 <body>
     <header>
-        <section class="header-content">
+        <div class="header-content">
             <img src="images/profile.png" alt="headshot">
-            <h1>Nicolas Velasquez</h1>
-        </section>
+            <span>Nicolas Velasquez</span>
+        </div>
         <nav>
             <a href="/index.html">Home</a>
             <a href="">Chamber</a>
