chamber site - Conceta calima

--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -14,25 +14,25 @@
 <body>
     <header class="site-header">
         <div>
-            <h1>Site Plan for The Chamber of Commerce Site Plan</h1>
+            <h1>Site Plan for Conecta Calima</h1>
         </div>
     </header>
     <main>
         <div class="card">
             <h3>Site Name</h3>
-            <h4>Darien Chamber of Commerce</h4>
+            <h4>Conecta Calima</h4>
             <p>This name represents a city in which the chamber operates.</p>
         </div>
         <div class="card">
             <h3>Site Purpose</h3>
-            <p>The Carlsbad Chamber of Commerce acts as a regional economic catalyst, leadership convener and community champion. We promote business through member services, economic and community development, and public policy that balances economic prosperity.</p>
+            <p>The purpose of the Conecta Calima site is to serve as a comprehensive resource for local entrepreneurs, promoting economic growth and community development. The site will provide information on events, networking opportunities, and business resources, as well as a platform to connect local businesses with the government and the community. Additionally, it will act as a digital showcase to highlight the region's attractions, encouraging tourism and investment.</p>
         </div>
         <div class="card">
             <h3>Scenarios</h3>
             <ul>
-                <li>What events will the chamber be holding this month that promote business-to-business networking?</li>
+                <li>What events is the Chamber of Commerce organizing this month to promote business networking?</li>
                 <li>Where can I find contact information for the chamber's board of directors?</li>
-                <li>What has been the population growth in the area?</li>
+                <li>What has been the population growth in Calima-Darién in recent years?</li>
             </ul>
         </div>
         <div class="card">
@@ -45,7 +45,7 @@
                         <th>Heading</th>
                     </tr>
                     <tr>
-                        <td>#CCCCCC</td>
+                        <td>#002349</td>
                         <td>#FFFFFF</td>
                         <td>#000000</td>
                     </tr>
@@ -62,11 +62,11 @@
             <h1>Wireframe</h1>
             <div class="desktop-wireframe">
                 <h2>Desktop View</h2>
-                <img src="images/desktop-view.png" alt="">
+                <img src="images/Conecta Calima.png" alt="">
             </div>
             <div class="mobile-wireframe">
                 <h2>Mobile View</h2>
-                <img src="images/mobile-view.png" alt="">
+                <img src="images/Conecta Calima Mobile Version.png" alt="">
             </div>
         </div>
     </main>
