fix images name

--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -63,11 +63,11 @@
             <h1>Wireframe</h1>
             <div class="desktop-wireframe">
                 <h2>Desktop View</h2>
-                <img src="images/Conecta Calima.png" alt="">
+                <img src="images/conecta-calima-desktop.png" alt="">
             </div>
             <div class="mobile-wireframe">
                 <h2>Mobile View</h2>
-                <img src="images/Conecta Calima Mobile Version.png" alt="">
+                <img src="images/conecta-calima-mobile-version.png" alt="">
             </div>
         </div>
     </main>
