--- a/chamber/index.html
+++ b/chamber/index.html
@@ -21,11 +21,11 @@
 </head>
 <body>
     <!-- Navigation -->
-    <header>
+    </header>
         <nav>
-            <div class="logo">
-                <img src="images/logo.png" alt="Conecta Calima Logo">
-            </div>
+            <a href="index.html" class="logo">
+                <img src="images/conecta-calima-logo-white.png" alt="Conecta Calima Logo">
+            </a>
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Discover</a></li>
@@ -33,66 +33,71 @@
                 <li><a href="#">Join</a></li>
                 <li><a href="#" class="btn-connect">Let's Connect</a></li>
             </ul>
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
         </nav>
     </header>
+    
 
     <!-- Main Content -->
     <main>
         <!-- Hero Section (Opening) -->
         <section class="hero">
-            <img src="images/hero-image.jpg" alt="Calima Darien Landscape" class="hero-img">
+            <img src="" alt="Calima Darien Landscape" class="hero-img">
             <div class="hero-content">
-                <h1>Bienvenidos a Conecta Calima</h1>
-                <p>Conectando negocios, personas y oportunidades en Calima Darien</p>
-                <a href="#" class="btn-primary">Únete a la Cámara de Comercio</a>
+                <a href="#" class="btn-primary">Join the Chamber</a>
             </div>
         </section>
 
         <!-- Current Events Section -->
         <section class="current-events">
-            <h2>Eventos Actuales</h2>
+            <h2>Events</h2>
             <div class="events-list">
                 <article class="event">
-                    <h3>Evento Empresarial</h3>
-                    <p>Únete a nuestro próximo evento de networking para empresarios locales el 15 de octubre.</p>
-                </article>
-                <article class="event">
-                    <h3>Feria Turística</h3>
-                    <p>Participa en nuestra feria turística el 25 de noviembre en el parque central.</p>
+                    <h3>Ribbon Cutting - The Diamond Shack</h3>
+                    <p>Join us for the grand opening of The Diamond Shack, Thursday at 1:00 p.m.</p>
+                    <a href="#">More info ...</a>
                 </article>
             </div>
         </section>
 
         <!-- Weather Card Section -->
         <section class="weather-card">
-            <h2>El Clima en Calima</h2>
+            <h2>Weather</h2>
             <div class="weather-content">
-                <!-- Weather info will be dynamically added with JavaScript -->
                 <div class="weather-info">
-                    <p>☀️ 30°C - Soleado</p>
+                    <p>33°C - Partly Cloudy</p>
+                    <p>Humidity: 35%</p>
+                    <p>Wind Chill: N/A</p>
                 </div>
             </div>
         </section>
 
         <!-- Company Spotlights Section -->
         <section class="company-spotlights">
-            <h2>Empresas Destacadas</h2>
-            <div class="spotlights-list">
-                <article class="spotlight">
-                    <img src="images/company1.jpg" alt="Empresa 1">
-                    <h3>Empresa 1</h3>
-                    <p>Descubre cómo esta empresa está impulsando la innovación en Calima.</p>
-                </article>
-                <article class="spotlight">
-                    <img src="images/company2.jpg" alt="Empresa 2">
-                    <h3>Empresa 2</h3>
-                    <p>Un ejemplo de excelencia en servicios turísticos.</p>
-                </article>
-                <article class="spotlight">
-                    <img src="images/company3.jpg" alt="Empresa 3">
-                    <h3>Empresa 3</h3>
-                    <p>Apoyando el desarrollo sostenible en nuestra región.</p>
-                </article>
+            <div class="spotlight-card">
+                <h3>Thankful Transport</h3>
+                <p>"We get it there for you!"</p>
+                <p>hello@thankfultransport.com</p>
+                <p>+999-9999-9999</p>
+                <a href="#">Website</a>
+            </div>
+            <div class="spotlight-card">
+                <h3>Code Primera</h3>
+                <p>After school coding!</p>
+                <p>contact@codeprimera.com</p>
+                <p>+999-9999-9999</p>
+                <a href="#">Website</a>
+            </div>
+            <div class="spotlight-card">
+                <h3>Build A Treefort</h3>
+                <p>Over 1000 Plans!</p>
+                <p>builda@treefort.com</p>
+                <p>+888-8888-8888</p>
+                <a href="#">Website</a>
             </div>
         </section>
     </main>
@@ -100,7 +105,7 @@
     <!-- Footer -->
     <footer>
         <div class="footer-logo">
-            <img src="images/logo-footer.png" alt="Conecta Calima Logo">
+            <img src="" alt="Conecta Calima Logo">
         </div>
         <p>© 2024 Conecta Calima. Todos los derechos reservados.</p>
         <p><a href="#">Contáctenos</a> | <a href="#">Aviso Legal</a></p>
