footer section done

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -104,13 +104,20 @@
 
     <!-- Footer -->
     <footer>
-        <div class="footer-logo">
-            <img src="" alt="Conecta Calima Logo">
+        <div class="top-section">
+            <div class="left-section">
+                <div class="footer-logo">
+                    <img src="images/conecta-calima-logo-white.png" alt="Conecta Calima Logo">
+                </div>
+                <p>© 2024 Conecta Calima. All rights reserved.</p>
+                <p class="disclaimer"><a href="#">Contact Us</a> | <a href="#">Disclaimer</a></p>
+            </div>
         </div>
-        <p>© 2024 Conecta Calima. Todos los derechos reservados.</p>
-        <p><a href="#">Contáctenos</a> | <a href="#">Aviso Legal</a></p>
-        <p>©<span id="currentYear"></span>🌎 Nicolas Velasquez 🌎 Colombia</p>
-        <p id="lastModified"></p>
+        <hr> <!-- Line to divide sections -->
+        <div class="bottom-section">
+            <p>©<span id="currentYear"></span>🌎 Nicolas Velasquez 🌎 Colombia</p>
+            <p id="lastModified"></p>
+        </div>
     </footer>
 </body>
 </html>
