here-opening done

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -46,8 +46,9 @@
     <main>
         <!-- Hero Section (Opening) -->
         <section class="hero">
-            <img src="" alt="Calima Darien Landscape" class="hero-img">
+            <img src="images/hero-image.jpg" alt="Calima Darien Landscape" class="hero-img">
             <div class="hero-content">
+                <h1>Conecta Calima</h1>
                 <a href="#" class="btn-primary">Join the Chamber</a>
             </div>
         </section>
