--- a/chamber/index.html
+++ b/chamber/index.html
@@ -58,9 +58,19 @@
             <h2>Events</h2>
             <div class="events-list">
                 <article class="event">
-                    <h3>Ribbon Cutting - The Diamond Shack</h3>
+                    <h3>Ribbon Cutting - Navio</h3>
                     <p>Join us for the grand opening of The Diamond Shack, Thursday at 1:00 p.m.</p>
-                    <a href="#">More info ...</a>
+                    <a href="#" class="btn-secondary">Learn More</a>
+                </article>
+                <article class="event">
+                    <h3>Come to Community Market Day</h3>
+                    <p>Support local vendors at the Calima Market on Saturday from 8:00 a.m. to 2:00 p.m.</p>
+                    <a href="#" class="btn-secondary">Learn More</a>
+                </article>
+                <article class="event">
+                    <h3>Business Networking Lunch</h3>
+                    <p>Meet and network with local business owners over lunch, Friday at 12:00 p.m.</p>
+                    <a href="#" class="btn-secondary">Learn More</a>
                 </article>
             </div>
         </section>
@@ -70,35 +80,56 @@
             <h2>Weather</h2>
             <div class="weather-content">
                 <div class="weather-info">
-                    <p>33°C - Partly Cloudy</p>
-                    <p>Humidity: 35%</p>
-                    <p>Wind Chill: N/A</p>
+                    <p>🌤️ <b>Partly Cloudy</b> - 20°C  </p>
+                    <p>💧 <b>Humidity</b> - 86%</p>
+                    <p>🌧️ <b>Precipitation</b> - 56%</p>
+                    <p>☁️ <b>Wind Chill</b> - 11 km/h</p>
                 </div>
             </div>
         </section>
 
         <!-- Company Spotlights Section -->
         <section class="company-spotlights">
-            <div class="spotlight-card">
-                <h3>Thankful Transport</h3>
-                <p>"We get it there for you!"</p>
-                <p>hello@thankfultransport.com</p>
-                <p>+999-9999-9999</p>
-                <a href="#">Website</a>
+            <h2>Member Spotlights</h2>
+            <div class="spotlight-cards">
+                <div class="spotlight-card">
+                    <h3>Fast Transport</h3>
+                    <p>"We get it there for you!"</p>
+                    <p><a href="mailto:hello@thankfultransport.com">hello@thankfultransport.com</a></p>
+                    <p><a href="tel:+9999999999">+999-9999-9999</a></p>
+                    <a href="#">Website</a>
+                </div>
+                <div class="spotlight-card">
+                    <h3>Code Primera</h3>
+                    <p>After school coding!</p>
+                    <p><a href="mailto:contact@codeprimera.com">contact@codeprimera.com</a></p>
+                    <p><a href="tel:+9999999999">+999-9999-9999</a></p>
+                    <a href="#">Website</a>
+                </div>
+                <div class="spotlight-card">
+                    <h3>Build A Treefort</h3>
+                    <p>Over 1000 Plans!</p>
+                    <p><a href="mailto:builda@treefort.com">builda@treefort.com</a></p>
+                    <p><a href="tel:+8888888888">+888-8888-8888</a></p>
+                    <a href="#">Website</a>
+                </div>
             </div>
-            <div class="spotlight-card">
-                <h3>Code Primera</h3>
-                <p>After school coding!</p>
-                <p>contact@codeprimera.com</p>
-                <p>+999-9999-9999</p>
-                <a href="#">Website</a>
-            </div>
-            <div class="spotlight-card">
-                <h3>Build A Treefort</h3>
-                <p>Over 1000 Plans!</p>
-                <p>builda@treefort.com</p>
-                <p>+888-8888-8888</p>
-                <a href="#">Website</a>
+        </section>
+
+        <!-- Call to Action Block -->
+        <section class="cta-block">
+            <h2>Get in Touch</h2>
+            <p>Connect with us on social media!</p>
+            <div class="social-icons">
+                <a href="#" class="social-icon">
+                    <img src="images/whatsapp-128-svgrepo-com.svg" alt="WhatsApp">
+                </a>
+                <a href="#" class="social-icon">
+                    <img src="images//facebook-svgrepo-com.svg" alt="Facebook">
+                </a>
+                <a href="#" class="social-icon">
+                    <img src="images/instagram-167-svgrepo-com.svg" alt="Instagram">
+                </a>
             </div>
         </section>
     </main>
@@ -116,7 +147,7 @@
         </div>
         <hr> <!-- Line to divide sections -->
         <div class="bottom-section">
-            <p>©<span id="currentYear"></span>🌎 Nicolas Velasquez 🌎 Colombia</p>
+            <p>©<span id="currentYear"></span> Conecta Calima | <b>Nicolas Velasquez</b> | WDD 230 Project</p>
             <p id="lastModified"></p>
         </div>
     </footer>
