--- a/chamber/index.html
+++ b/chamber/index.html
@@ -28,7 +28,7 @@
                 <img src="images/conecta-calima-logo-white.png" alt="Conecta Calima Logo">
             </a>
             <ul class="nav-links">
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Discover</a></li>
                 <li><a href="#">Directory</a></li>
                 <li><a href="#">Join</a></li>
