--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <nav id="menu-items" class="menu">
             <a href="/index.html">Home</a>
-            <a href="">Chamber</a>
+            <a href="/chamber/index.html">Chamber</a>
             <a href="/wdd230/week01/chamber-site-plan.html">Site Plan</a>
             <a href="">Form</a>
         </nav>
