fix title and description

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nicolas Velasquez - WDD 230 - Web Frontend Development </title>
-    <meta name="description" content="WDD 230 - Web Frontend Development - Nicolas Velasquez - Demonstrate knowledge by applying HTML and CSS in the design and development of a page from course assignment portal">
+    <title>Conecta Calima </title>
+    <meta name="description" content="Conecta Calima is a site to serve as a comprehensive resource for local entrepreneurs, promoting economic growth and community development. ">
     <meta name="author" content="Nicolas Velasquez">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
