--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <!-- Navigation -->
-    </header>
+    <header>
         <nav>
             <a href="index.html" class="logo">
                 <img src="images/conecta-calima-logo-white.png" alt="Conecta Calima Logo">
