fix hero button

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -50,7 +50,7 @@
             <img src="images/hero-image.jpg" alt="Calima Darien Landscape" class="hero-img">
             <div class="hero-content">
                 <h1>Conecta Calima</h1>
-                <a href="#" class="btn-primary">Join the Chamber</a>
+                <a href="#" class="btn-primary">Join to Conecta Calima</a>
             </div>
         </section>
 
