add visitor counter

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                 <h2>Information</h2>
                 <ul class="info-list">
                     <li>Calima, Colombia </li>
-                    <li>☀️ 30°C - Sunshine</li>
-                    <li>Page Visits: 1</li>
+                    <li>☀️ 29°C - Sunshine</li>
+                    <li>Page Visits: <span id="page-visit-counter">1</span></li>
                 </ul>
             </section>
         </div>
