fix some issues

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <img src="images/roma-temple-large.webp" alt="Italy Temple" class="hero-img" width="500" height="250">
             </picture>
             <div class="hero-overlay">
-                <h1>Italy Temple</h1>
+                <p>Italy Temple</p>
             </div>
         </section>
         <h1>WDD 230: Web Frontend Development</h1>
