--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <!-- Larger view image -->
                 <source srcset="images/roma-temple-larger.webp" media="(min-width: 768px)">
                 <!-- Fallback image -->
-                <img src="images/roma-temple-large.webp" alt="Italy Temple" class="hero-img" width="500" height="250">
+                <img src="images/roma-temple-large.webp" alt="Italy Temple" class="hero-img" width="500" height="250" loading="lazy">
             </picture>
             <div class="hero-overlay">
                 <p>Italy Temple</p>
