--- a/chamber/index.html
+++ b/chamber/index.html
@@ -29,7 +29,7 @@
             </a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Discover</a></li>
+                <li><a href="discover.html">Discover</a></li>
                 <li><a href="#">Directory</a></li>
                 <li><a href="#">Join</a></li>
                 <li><a href="#" class="btn-connect">Let's Connect</a></li>
