--- a/form.html
+++ b/form.html
@@ -29,10 +29,10 @@
             <button id="dark-mode-toggle" class="dark-mode-btn" aria-label="Toggle dark mode">🌙</button>
         </div>
         <nav id="menu-items" class="menu">
-            <a href="/index.html">Home</a>
+            <a href="/wdd230/index.html">Home</a>
             <a href="/wdd230/chamber/index.html">Chamber</a>
             <a href="/wdd230/week01/chamber-site-plan.html">Site Plan</a>
-            <a href="/form.html">Form</a>
+            <a href="/wdd230/form.html">Form</a>
         </nav>
     </header>
     <main>
