--- a/record.html
+++ b/record.html
@@ -5,33 +5,101 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Confirmation</title>
     <style>
-        body {
-            font-family: 'Open Sans', sans-serif;
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body, html {
+            font-family: 'Montserrant', sans-serif;
+            line-height: 1.6;
+            color: #333;
+            background-color: #f4f4f4;
+            padding: 20px;
+        }
+
+        main {
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #f9f9f9;
-        }
-        main {
             text-align: center;
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
+
+        .record-section {
+            background-color: #fff;
+            text-align: center;
+            padding: 2rem;
+        }
+
         h1 {
+            font-size: 1.8rem;
             color: #333;
+            margin-bottom: 10px;
         }
+
         p {
             font-size: 1.2rem;
+            margin-bottom: 20px;
+        }
+
+        a.btn {
+            background-color: transparent;
+            display: inline-block;
+            color: #333;
+            cursor: pointer;
+            border: 1px solid #333;
+            font-size: 1.2rem;
+            padding: 15px;
+            text-decoration: none;
+            border-radius: 0;
+        }
+
+        a.btn:hover {
+            background-color: #333;
+            color: #fff;
+        }
+
+        @media (min-width: 768px) {
+            body {
+                padding: 40px;
+            }
+
+            main {
+                justify-content: center;
+                align-items: center;
+                
+            }
+
+            section {
+                max-width: 600px;
+                padding: 40px;
+            }
+
+            .record-section h1 {
+                font-size: 2rem;
+            }
+
+            p {
+                font-size: 1rem;
+            }
+
+            a.btn {
+                padding: 12px 24px;
+                font-size: 1rem;
+            }
         }
     </style>
 </head>
 <body>
     <main>
-        <h1>Form Submitted Successfully!</h1>
-        <p>Thank you for submitting the form.</p>
+        <div class="record-section">
+            <h1>Form Submitted Successfully!</h1>
+            <p>Thank you for submitting the form.</p>
+            <a href="/wdd230/index.html" class="btn">Go to Home</a>
+        </div>
     </main>
 </body>
 </html>
