--- a/chamber/join.html
+++ b/chamber/join.html
@@ -45,7 +45,7 @@
         <!-- Hero Section (Opening) -->
         <section class="hero-discover">
             <picture>
-                <source srcset="images/discover-hero-image.webp" media="(max-width: 960px)">
+                <source srcset="images/join-hero-image.webp" media="(max-width: 960px)">
                 <img src="images/join-hero-image.webp" alt="Calima Darien Landscape" class="hero-img" loading="lazy">
             </picture>
             <div class="hero-content">
