--- a/chamber/join.html
+++ b/chamber/join.html
@@ -81,8 +81,9 @@
 
                 <!-- Membership Level Selection -->
                 <label for="membership-level">Membership Level:</label>
-                <select id="membership-level" name="membershipLevel" required>
-                    <option value="np">NP Membership (Non-profit, no fee)</option>
+                <select id="membership-level" name="membership" required>
+                    <option value="" disabled selected>Select Membership Level</option>
+                    <option value="np">NP Membership</option>
                     <option value="bronze">Bronze Membership</option>
                     <option value="silver">Silver Membership</option>
                     <option value="gold">Gold Membership</option>
