--- a/week05/prophets.html
+++ b/week05/prophets.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prophets</title>
+    <title>Prophets API</title>
     <link rel="stylesheet" href="styles/prophets.css">
     <script src="scripts/prophets.js" defer></script>
-    
 </head>
 <body>
     <header>
@@ -18,7 +17,7 @@
     </main>
 
     <footer>
-        [Enter Your Name Here] | Latter-day Prophets
+        Nicolas Velasquez | Latter-day Prophets
     </footer>
 </body>
 </html>
