prophets actitivy done!

--- a/week05/prophets.html
+++ b/week05/prophets.html
@@ -6,6 +6,8 @@
     <title>Prophets API</title>
     <link rel="stylesheet" href="styles/prophets.css">
     <script src="scripts/prophets.js" defer></script>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
 </head>
 <body>
     <header>
