add weather API

--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
             <section class="card">
                 <h2>Information</h2>
                 <ul class="info-list">
-                    <li>Calima, Colombia </li>
-                    <li>☀️ 29°C - Sunshine</li>
+                    <li id="weather-info">Loading weather...</li>
                     <li>Page Visits: <span id="page-visit-counter">1</span></li>
                 </ul>
             </section>
