add info cards and styles

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -45,18 +45,20 @@
         <!-- Hero Section (Opening) -->
         <section class="hero-discover">
             <picture>
-                <source srcset="images/directory.webp" media="(max-width: 960px)">
-                <img src="images/directory.webp" alt="Calima Darien Landscape" class="hero-img" loading="lazy">
+                <source srcset="images/directory-hero-image.webp" media="(max-width: 960px)">
+                <img src="images/directory-hero-image.webp" alt="Calima Darien Landscape" class="hero-img" loading="lazy">
             </picture>
             <div class="hero-content">
                 <h1>Directory</h1>
             </div>
         </section>
-        <h1>Member Directory</h1>
-        <div class="view-toggle">
-            <button id="grid-view">Grid View</button>
-            <button id="list-view">List View</button>
-        </div>
+        <section class="member-directory">
+            <h2>Member Directory</h2>
+            <div class="view-toggle">
+                <button id="grid-view">Grid View</button>
+                <button id="list-view">List View</button>
+            </div>
+        </section>
         <section id="directory-container" class="directory-grid">
             <!-- Member cards will be dynamically inserted here -->
         </section>
