fix some JS errors and add homepage banner

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -108,6 +108,12 @@
                 </a>
             </div>
         </section>
+
+        <!-- Banner -->
+        <div id="meet-greet-banner" class="banner hidden">
+            <p>Join us for the Chamber of Commerce Meet and Greet on Wednesday at 7:00 p.m.</p>
+            <button id="close-banner">Close</button>
+        </div>
     </main>
 
     <!-- Footer -->
