Fix banner style

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -112,7 +112,7 @@
         <!-- Banner -->
         <div id="meet-greet-banner" class="banner hidden">
             <p>Join us for the Chamber of Commerce Meet and Greet on Wednesday at 7:00 p.m.</p>
-            <button id="close-banner">Close</button>
+            <button id="close-banner" aria-label="Close banner">❌</button>
         </div>
     </main>
 
