--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -32,7 +32,7 @@
                 <li><a href="discover.html">Discover</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
-                <li><a href="#" class="btn-connect">Let's Connect</a></li>
+                <li><a href="join.html" class="btn-connect">Let's Connect</a></li>
             </ul>
             <div class="burger">
                 <div class="line1"></div>
