--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -24,9 +24,9 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
-                <li><a href="#">Directory</a></li>
+                <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
-                <li><a href="#" class="btn-connect">Let's Connect</a></li>
+                <li><a href="join.html" class="btn-connect">Let's Connect</a></li>
             </ul>
             <div class="burger">
                 <div class="line1"></div>
